[package]
authors = ["cisco211 <TjSBMD1810@yahoo.de>"]
description = "Vault = A job based backup manager."
edition = "2021"
name = "vault"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
